--- a/plugin.xml
+++ b/plugin.xml
@@ -1,8 +1,10 @@
 <plugin name='jalarms' version='0.1' grailsVersion='1.3.5 &gt; *'>
-  <author>Your name</author>
-  <title>Plugin summary/headline</title>
+  <author>Enrique Zamudio, Hector Cuesta, Andres Almiray</author>
+  <authorEmail>chochos@users.sourceforge.net, aalmiray@users.sourceforge.net</authorEmail>
+  <title>JAlarms plugin for Grails</title>
   <description>\
-Brief description of the plugin.
+This plugin enables Grails applications to send alarms with a multitude of configurable channels.
+Relies on JAlarms http://jalarms.sourceforge.net
 </description>
   <documentation>http://grails.org/plugin/jalarms</documentation>
   <resources>
